--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
   <body>
 
-    <header>
+    <!-- <header>
       <div class="container">
         <a id="a-title" href="{{ '/' | relative_url }}">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
@@ -27,7 +27,20 @@
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
-    </header>
+    </header> -->
+	
+	<footer>
+		<div class="grid">
+		<div class="unit one-third align-right center-on-mobiles">
+			<p>
+				Hosted on
+				<a href="https://github.com">
+				<img src="http://owner.aeonbits.org/img/footer-logo.png" alt="GitHub • Social coding">
+				</a>
+			</p>
+		</div>
+		</div>
+	</footer>
 
     <div class="container">
       <section id="main_content">
